_docs/kustomize/akash-hostname-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akash-hostname-operator
spec:
  ports:
    - name: status
      port: 8188
