_docs/kustomize/akash-hostname-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-hostname-operator
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"

spec:
  rules:
    - host: akash-hostname-operator.localhost
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: akash-hostname-operator
               port:
                 name: status
